--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,13 @@
 <footer class="footer">
   <div class="container">
 
-    {% if site.data.settings.mailchimp %}
+    <!-- {% if site.data.settings.mailchimp %}
     {% include subscribe.html %}
     {% else %} {% endif %}
 
     {% if site.data.settings.instagram %}
     {% include instagram.html %}
-    {% else %} {% endif %}
+    {% else %} {% endif %} -->
 
     {% include contact-link.html %}
 
