--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,9 +46,9 @@ layout: default
     <!-- begin post -->
     <article class="post {{ no-image }} col col-8 col-t-10 col-m-12">
 
-      <!-- <div class="post__content">
+      <div class="post__content">
         {{ content }}
-      </div> -->
+      </div>
 
       <div class="post__share">
         <span class="share__title">Partager cet article:</span>
